force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/REZ_HOUSING_BOOKING_VW__x.object-meta.xml
<CustomObject>
    <description>Field mapping can be found here: https://docs.google.com/spreadsheets/d/1slPhrrUp047cYk0rP14uXmuJH0ddpc7GLBRtr65IJnw/edit#gid=0
Query can be found here: https://docs.google.com/document/d/1BoG-WfksUyUOlQsSbtuOPdMoasBXjm9rd9cDFazt0mw/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>REZ_HOUSING_BOOKING_VWs</externalName>
    <label>Housing Booking (external)</label>
    <pluralLabel>Housing Booking (external)</pluralLabel>
</CustomObject>