force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/BOOKING_BUILDING__c.field-meta.xml
<CustomField>
    <fullName>BOOKING_BUILDING__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.BOOKING_BUILDING</description>
    <externalDeveloperName>BOOKING_BUILDING</externalDeveloperName>
    <label>Building</label>
    <length>25</length>
    <type>Text</type>
</CustomField>