force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/BOOKING_CAMPUS__c.field-meta.xml
<CustomField>
    <fullName>BOOKING_CAMPUS__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.BOOKING_CAMPUS</description>
    <externalDeveloperName>BOOKING_CAMPUS</externalDeveloperName>
    <label>Campus</label>
    <length>35</length>
    <type>Text</type>
</CustomField>