force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/BOOKING_FLOOR_SUITE__c.field-meta.xml
<CustomField>
    <fullName>BOOKING_FLOOR_SUITE__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.BOOKING_FLOOR_SUITE</description>
    <externalDeveloperName>BOOKING_FLOOR_SUITE</externalDeveloperName>
    <label>Floor Suite</label>
    <length>50</length>
    <type>Text</type>
</CustomField>