force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/BOOKING_ID__c.field-meta.xml
<CustomField>
    <fullName>BOOKING_ID__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.BOOKING_ID</description>
    <externalDeveloperName>BOOKING_ID</externalDeveloperName>
    <label>Booking Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>