force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/BOOKING_ROOM__c.field-meta.xml
<CustomField>
    <fullName>BOOKING_ROOM__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.BOOKING_ROOM</description>
    <externalDeveloperName>BOOKING_ROOM</externalDeveloperName>
    <label>Room</label>
    <length>30</length>
    <type>Text</type>
</CustomField>