force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/BOOKING_SECTION__c.field-meta.xml
<CustomField>
    <fullName>BOOKING_SECTION__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.BOOKING_SECTION</description>
    <externalDeveloperName>BOOKING_SECTION</externalDeveloperName>
    <label>Section</label>
    <length>50</length>
    <type>Text</type>
</CustomField>