force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/BOOKING_STATUS__c.field-meta.xml
<CustomField>
    <fullName>BOOKING_STATUS__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.BOOKING_STATUS</description>
    <externalDeveloperName>BOOKING_STATUS</externalDeveloperName>
    <label>Booking Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>