force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/CHECK_IN_DT__c.field-meta.xml
<CustomField>
    <fullName>CHECK_IN_DT__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.CHECK_IN_DT</description>
    <externalDeveloperName>CHECK_IN_DT</externalDeveloperName>
    <label>Check-in Date</label>
    <type>Date</type>
</CustomField>