force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/CHECK_OUT_DT__c.field-meta.xml
<CustomField>
    <fullName>CHECK_OUT_DT__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.CHECK_OUT_DT</description>
    <externalDeveloperName>CHECK_OUT_DT</externalDeveloperName>
    <label>Check-out Date</label>
    <type>Date</type>
</CustomField>