force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Housing Booking (external)</relationshipLabel>
    <relationshipName>Housing_Booking_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>