force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/ROOM_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ROOM_TYPE__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.ROOM_TYPE</description>
    <externalDeveloperName>ROOM_TYPE</externalDeveloperName>
    <label>Room Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>