force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/TERM_CD__c.field-meta.xml
<CustomField>
    <fullName>TERM_CD__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.TERM_CD</description>
    <externalDeveloperName>TERM_CD</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Housing Booking (external)</relationshipLabel>
    <relationshipName>Housing_Booking_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>