force-app/main/default/objects/REZ_HOUSING_BOOKING_VW__x/fields/TERM_DESCR__c.field-meta.xml
<CustomField>
    <fullName>TERM_DESCR__c</fullName>
    <description>REZ_HOUSING_BOOKING_VW.TERM_DESCR</description>
    <externalDeveloperName>TERM_DESCR</externalDeveloperName>
    <label>Term Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>